# talk-to-fengge

./: .env.example  .gitignore  LICENSE  NOTICE  README.md  README_EN.md  Talk-to-Me-V3.6.command  pyproject.toml
assets/voice_samples/: README.md  fengge_ref.m4a
docs/: PERSONA_CLONING_SOP.md
personas/fengge/: persona.env.example
personas/steve_jobs/: SOURCES.md  persona.env.example  persona.md
scripts/: bootstrap_cloud_env.py  clone_voice.py  select_persona.py  smoke_cloud.py  smoke_realtime.py
tests/: test_cloud_pipeline.py
web/: index.html
worker/: agent.py  energy_vad.py  llm_factory.py  main.py  persona.py  stt_factory.py  tts_factory.py  web_server.py
