[project]
name = "talk-to-persona-cloud"
version = "4.0.0"
description = "豆包 ASR 2.0、DeepSeek V4 Flash 与豆包 WebSocket TTS 驱动的全云端实时人物对话。"
requires-python = ">=3.11,<3.15"
dependencies = [
    "livekit-agents~=1.5",
    "livekit-plugins-bytedance~=0.1.0",
    "python-dotenv>=1.1.1",
    "httpx>=0.28.0",
    "numpy>=2.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
